--- a/service/core/src/main/resources/strings/core-roles-groups.properties
+++ b/service/core/src/main/resources/strings/core-roles-groups.properties
@@ -1,8 +1,8 @@
-core.role.group.master.name=Master
-core.role.group.master.description=Group of the master roles
-core.role.group.management.name=Management
-core.role.group.management.description=Group of the management roles
-core.role.group.sherlock.name=Sherlock
-core.role.group.sherlock.description=Group of the sherlock roles
-core.role.group.finance.name=Finances
-core.role.group.finance.description=Group of the finances roles
+security.role-group.master.name=Master
+security.role-group.master.description=Group of the master roles
+security.role-group.management.name=Management
+security.role-group.management.description=Group of the management roles
+security.role-group.sherlock.name=Sherlock
+security.role-group.sherlock.description=Group of the sherlock roles
+security.role-group.finance.name=Finances
+security.role-group.finance.description=Group of the finances roles
