--- a/service/infrastructure/spring/spring-base/src/main/resources/strings/spring-strings.properties
+++ b/service/infrastructure/spring/spring-base/src/main/resources/strings/spring-strings.properties
@@ -4,4 +4,5 @@ request.page-request.parameter-validation.invalid-size=Sort parameter must have 
 request.page-request.parameter-validation.invalid-number=Parameter {0} must be a number
 request.page-request.parameter-validation.invalid-field=Order field name cannot be blank
 request.page-request.parameter-validation.invalid-sort={0} is no a valid page sort direction
+request.request.parameter-validation.convert-error=The field ''{0}'' cannot receive value ''{1}''
 request.filter-chain.authentication-entrypoint.access-denied=Access denied
