--- a/service/infrastructure/spring/spring-base/src/test/resources/application.yml
+++ b/service/infrastructure/spring/spring-base/src/test/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: ${PORT:8080}
 
 spring:
+  main:
+    allow-bean-definition-overriding: true
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
