Sonarqube, detekt and jacoco configuration

--- a/service/gradle.properties
+++ b/service/gradle.properties
@@ -1,1 +1,22 @@
 version=1.0.0
+detekt.configuration.configurationFilePath=config/detekt/detekt.yml
+detekt.configuration.buildUponDefault=true
+detekt.configuration.kotlinFiles=**/*.kt
+detekt.configuration.resourceFiles=**/resources/**
+detekt.configuration.buildFiles=**/build/**
+detetk.all.description=Custom DETEKT build for all modules
+detetk.all.parallel=true
+detetk.all.ignoreFailures=false
+detetk.all.autoCorrect=true
+detetk.all.buildUponDefaultConfig=true
+detetk.baseline.description=Custom DETEKT build to build baseline for all modules
+detetk.baseline.parallel=true
+detetk.baseline.ignoreFailures=false
+detetk.baseline.autoCorrect=true
+detetk.baseline.buildUponDefaultConfig=true
+sonar.projectKey=thomas-service
+sonar.projectName=T.H.O.M.A.S. Service
+sonar.host.url=http://localhost:9500
+sonar.java.coveragePlugin=jacoco
+sonar.coverage.jacoco.xmlReportPath=/reports/jacoco/jacocoRootReport/jacocoRootReport.xml
+sonar.verbose=true
