Implementing management spring

--- a/service/module/management/management-domain/src/main/resources/strings/management-domain.properties
+++ b/service/module/management/management-domain/src/main/resources/strings/management-domain.properties
@@ -4,6 +4,7 @@ management.user-validation.main-email.already-used=E-mail is already in use by a
 management.user-validation.document-number.already-used=Document is already in use by another user
 management.user-validation.phone-number.already-used=Phone is already in use by another user
 management.user-validation.user-groups.not-found=Group(s) with id(s) not found {0}
+management.user-signup.create-user.not-enabled=User signup is not available
 management.group-search.not-found.error-message=Group not found with id {0}
 management.group-validation.group-name.already-used=There is another group with this name
 management.group-validation.group-data.invalid-data=Group data is not valid
