Implementing management and authentication

--- a/service/module/authentication/authentication-domain/src/main/resources/strings/authentication-domain.properties
+++ b/service/module/authentication/authentication-domain/src/main/resources/strings/authentication-domain.properties
@@ -1,3 +1,4 @@
 authentication.user-authentication.not-found.error-message=User not found with id {0}
 authentication.group-authentication.not-found.error-message=Group not found with id {0}
 authentication.user-authentication.invalid-credentials.username-password=Invalid username or password
+authentication.user-authentication.invalid-password.minimum-requirements=Password must contain at least one lower case letter, one upper case letter, one number and one symbol
