Implementing authentication and management

--- a/service/module/authentication/authentication-domain/src/main/resources/strings/authentication-domain.properties
+++ b/service/module/authentication/authentication-domain/src/main/resources/strings/authentication-domain.properties
@@ -1,4 +1,6 @@
 authentication.user-authentication.not-found.error-message=User not found with id {0}
 authentication.group-authentication.not-found.error-message=Group not found with id {0}
 authentication.user-authentication.invalid-credentials.username-password=Invalid username or password
+authentication.user-authentication.invalid-credentials.refresh-token=Refresh token is expired or invalid
 authentication.user-authentication.invalid-password.minimum-requirements=Password must contain at least one lower case letter, one upper case letter, one number and one symbol
+authentication.reset-password.token-reset.invalid-token=Invalid reset password token
