--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,89 +34,89 @@ services:
       timeout: 40s
       retries: 5
 
-#  rabbit:
-#    image: "rabbitmq:3-management"
-#    container_name: "thomas-rabbit"
-#    ports:
-#      - "6600:5672"
-#      - "16600:15672"
-#    healthcheck:
-#      test: [ "CMD", "rabbitmq-diagnostics", "-q", "ping" ]
-#      interval: 2s
-#      timeout: 3s
-#      retries: 30
-#    networks:
-#      - thomas-network
-#
-#  mongo:
-#    image: "mongo"
-#    container_name: "thomas-mongo"
-#    environment:
-#      MONGO_INITDB_ROOT_USERNAME: thomas
-#      MONGO_INITDB_ROOT_PASSWORD: thomas
-#    ports:
-#      - "26000:27017"
-#    volumes:
-#      - thomas-mongo-volume:/data/db
-#    networks:
-#      - thomas-network
-#
-#  sonarqube:
-#    image: sonarqube:lts-community
-#    container_name: "thomas-sonarqube"
-#    depends_on:
-#      postgres:
-#        condition: service_healthy
-#    environment:
-#      SONAR_JDBC_URL: jdbc:postgresql://postgres:5432/sonarqube
-#      SONAR_JDBC_USERNAME: sonarqube
-#      SONAR_JDBC_PASSWORD: sonarqube
-#      SONAR_SEARCH_JAVAOPTS: -Xms2048m -Xmx2048m
-#    ports:
-#      - "9500:9000"
-#    volumes:
-#      - thomas-sonarqube-conf:/opt/sonarqube/conf
-#      - thomas-sonarqube-data:/opt/sonarqube/data
-#      - thomas-sonarqube-extensions:/opt/sonarqube/extensions
-#      - thomas-sonarqube-logs:/opt/sonarqube/logs
-#      - thomas-sonarqube-temp:/opt/sonarqube/temp
-#    networks:
-#      - thomas-network
-#
-#  keycloak:
-#    image: quay.io/keycloak/keycloak:25.0.2
-#    container_name: "thomas-keycloak"
-#    command: start
-#    depends_on:
-#      postgres:
-#        condition: service_healthy
-#    environment:
-#      KC_HOSTNAME: localhost
-#      KC_HOSTNAME_PORT: 8080
-#      KC_HOSTNAME_STRICT_BACKCHANNEL: false
-#      KC_HTTP_ENABLED: true
-#      KC_HOSTNAME_STRICT_HTTPS: false
-#      KC_HEALTH_ENABLED: true
-#      KEYCLOAK_ADMIN: thomas-service
-#      KEYCLOAK_ADMIN_PASSWORD: thomas-service
-#      KC_DB: postgres
-#      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
-#      KC_DB_USERNAME: keycloak
-#      KC_DB_PASSWORD: keycloak
-#    ports:
-#      - "9600:8080"
-#    restart: always
-#    networks:
-#      - thomas-network
+  rabbit:
+    image: "rabbitmq:3-management"
+    container_name: "thomas-rabbit"
+    ports:
+      - "6600:5672"
+      - "16600:15672"
+    healthcheck:
+      test: [ "CMD", "rabbitmq-diagnostics", "-q", "ping" ]
+      interval: 2s
+      timeout: 3s
+      retries: 30
+    networks:
+      - thomas-network
+
+  mongo:
+    image: "mongo"
+    container_name: "thomas-mongo"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: thomas
+      MONGO_INITDB_ROOT_PASSWORD: thomas
+    ports:
+      - "26000:27017"
+    volumes:
+      - thomas-mongo-volume:/data/db
+    networks:
+      - thomas-network
+
+  sonarqube:
+    image: sonarqube:lts-community
+    container_name: "thomas-sonarqube"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      SONAR_JDBC_URL: jdbc:postgresql://postgres:5432/sonarqube
+      SONAR_JDBC_USERNAME: sonarqube
+      SONAR_JDBC_PASSWORD: sonarqube
+      SONAR_SEARCH_JAVAOPTS: -Xms2048m -Xmx2048m
+    ports:
+      - "9500:9000"
+    volumes:
+      - thomas-sonarqube-conf:/opt/sonarqube/conf
+      - thomas-sonarqube-data:/opt/sonarqube/data
+      - thomas-sonarqube-extensions:/opt/sonarqube/extensions
+      - thomas-sonarqube-logs:/opt/sonarqube/logs
+      - thomas-sonarqube-temp:/opt/sonarqube/temp
+    networks:
+      - thomas-network
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:25.0.2
+    container_name: "thomas-keycloak"
+    command: start
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      KC_HOSTNAME: localhost
+      KC_HOSTNAME_PORT: 8080
+      KC_HOSTNAME_STRICT_BACKCHANNEL: false
+      KC_HTTP_ENABLED: true
+      KC_HOSTNAME_STRICT_HTTPS: false
+      KC_HEALTH_ENABLED: true
+      KEYCLOAK_ADMIN: thomas-service
+      KEYCLOAK_ADMIN_PASSWORD: thomas-service
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: keycloak
+    ports:
+      - "9600:8080"
+    restart: always
+    networks:
+      - thomas-network
 
 volumes:
   thomas-postgresql-volume:
-#  thomas-mongo-volume:
-#  thomas-sonarqube-conf:
-#  thomas-sonarqube-data:
-#  thomas-sonarqube-extensions:
-#  thomas-sonarqube-logs:
-#  thomas-sonarqube-temp:
+  thomas-mongo-volume:
+  thomas-sonarqube-conf:
+  thomas-sonarqube-data:
+  thomas-sonarqube-extensions:
+  thomas-sonarqube-logs:
+  thomas-sonarqube-temp:
 
 networks:
   thomas-network:
