--- a/core/src/main/resources/strings/core-roles-categories.properties
+++ b/core/src/main/resources/strings/core-roles-categories.properties
@@ -1,4 +1,4 @@
-security.role-category.organization.name=Empresa
-security.role-category.organization.description=Permissões de nivel empresa
-security.role-category.hub.name=Divisão
-security.role-category.hub.description=Permissões de nivel divisão
+security.role-category.organization.name=Organização
+security.role-category.organization.description=Permissões de nivel da organização
+security.role-category.member.name=Member
+security.role-category.member.description=Permissões de nivel de member da organização
