--- a/core/src/main/resources/strings/core-roles-groups.properties
+++ b/core/src/main/resources/strings/core-roles-groups.properties
@@ -1,4 +1,6 @@
-security.role-group.master.name=Master
-security.role-group.master.description=Grupo das permissões master
-security.role-group.management_organization.name=Gerenciamento
-security.role-group.management_organization.description=Grupo de permissões de gerenciamento
+security.role-group.organization.master.name=Master
+security.role-group.organization.master.description=Grupo das permissões master
+security.role-group.organization.management.name=Gerenciamento
+security.role-group.organization.management.description=Grupo de permissões de gerenciamento
+security.role-group.member.accounting.name=Contabil
+security.role-group.member.accounting.description=Grupo de permissões contabeis
