--- a/core/src/main/resources/strings/core-roles-subgroups.properties
+++ b/core/src/main/resources/strings/core-roles-subgroups.properties
@@ -1,8 +1,10 @@
-security.role-subgroup.master_subgroup.name=Master
-security.role-subgroup.master_subgroup.description=Subgrupo das permissões master
-security.role-subgroup.management_organization_user.name=Usuários
-security.role-subgroup.management_organization_user.description=Subgrupo das permissões de usuário
-security.role-subgroup.management_organization_group.name=Grupos
-security.role-subgroup.management_organization_group.description=Subgrupo das permissões de grupo
-security.role-subgroup.management_organization_hub.name=Divisão
-security.role-subgroup.management_organization_hub.description=Subgrupo das permissões de divisão
+security.role-subgroup.organization.master_subgroup.name=Master
+security.role-subgroup.organization.master_subgroup.description=Subgrupo das permissões master
+security.role-subgroup.organization.management_user.name=Usuários
+security.role-subgroup.organization.management_user.description=Subgrupo das permissões de usuário
+security.role-subgroup.organization.management_group.name=Grupos
+security.role-subgroup.organization.management_group.description=Subgrupo das permissões de grupo
+security.role-subgroup.organization.management_member.name=Member
+security.role-subgroup.organization.management_member.description=Subgrupo das permissões de member
+security.role-subgroup.member.accounting_coa.name=Plano de contas
+security.role-subgroup.member.accounting_coa.description=Subgrupo das permissões de plano de contas
