--- a/core/src/main/resources/strings/core-roles.properties
+++ b/core/src/main/resources/strings/core-roles.properties
@@ -1,24 +1,32 @@
-security.role.master.name=Master
-security.role.master.description=Permissão master do sistema, com acesso a todas as funcionalidades
-security.role.role_organization_user_read.name=Leitura de usuário
-security.role.role_organization_user_read.description=Permissão para leitura dos dados de usuário
-security.role.role_organization_user_create.name=Criação de usuário
-security.role.role_organization_user_create.description=Permissão para criação de um novo usuário do sistema
-security.role.role_organization_user_update.name=Edição de usuário
-security.role.role_organization_user_update.description=Permissão para edição dos dados e permissões de um usuário do sistema
-security.role.role_organization_group_read.name=Leitura de grupo
-security.role.role_organization_group_read.description=Permissão para leitura dos dados de grupo
-security.role.role_organization_group_create.name=Criação de grupo
-security.role.role_organization_group_create.description=Permissão para criação de um novo grupo do sistema
-security.role.role_organization_group_update.name=Edição de grupo
-security.role.role_organization_group_update.description=Permissão para edição dos dados e permissões de um grupo do sistema
-security.role.role_organization_group_delete.name=Exclusão de grupo
-security.role.role_organization_group_delete.description=Permissão para exclusão de um grupo do sistema
-security.role.role_organization_hub_read.name=Leitura de divisão
-security.role.role_organization_hub_read.description=Permissão para leitura dos dados de divisão
-security.role.role_organization_hub_create.name=Criação de divisão
-security.role.role_organization_hub_create.description=Permissão para criação de uma nova divisão do sistema
-security.role.role_organization_hub_update.name=Edição de divisão
-security.role.role_organization_hub_update.description=Permissão para edição dos dados e permissões de uma divisão do sistema
-security.role.role_organization_hub_delete.name=Exclusão de divisão
-security.role.role_organization_hub_delete.description=Permissão para exclusão de uma divisão do sistema
+security.role.organization.master.name=Master
+security.role.organization.master.description=Permissão master do sistema, com acesso a todas as funcionalidades
+security.role.organization.user_read.name=Leitura de usuário
+security.role.organization.user_read.description=Permissão para leitura dos dados de usuário da organização
+security.role.organization.user_create.name=Criação de usuário
+security.role.organization.user_create.description=Permissão para criação de um novo usuário da organização
+security.role.organization.user_update.name=Edição de usuário
+security.role.organization.user_update.description=Permissão para edição dos dados e permissões de um usuário da organização
+security.role.organization.group_read.name=Leitura de grupo
+security.role.organization.group_read.description=Permissão para leitura dos dados de grupo da organização
+security.role.organization.group_create.name=Criação de grupo
+security.role.organization.group_create.description=Permissão para criação de um novo grupo da organização
+security.role.organization.group_update.name=Edição de grupo
+security.role.organization.group_update.description=Permissão para edição dos dados e permissões de um grupo da organização
+security.role.organization.group_delete.name=Exclusão de grupo
+security.role.organization.group_delete.description=Permissão para exclusão de um grupo da organização
+security.role.organization.member_read.name=Leitura de member
+security.role.organization.member_read.description=Permissão para leitura dos dados de member da organização
+security.role.organization.member_create.name=Criação de member
+security.role.organization.member_create.description=Permissão para criação de um novo member da organização
+security.role.organization.member_update.name=Edição de member
+security.role.organization.member_update.description=Permissão para edição dos dados de um member da organização
+security.role.organization.member_delete.name=Exclusão de member
+security.role.organization.member_delete.description=Permissão para exclusão de um member da organização
+security.role.member.coa_read.name=Leitura de plano de contas
+security.role.member.coa_read.description=Permissão para leitura dos dados de plano de contas do member
+security.role.member.coa_create.name=Criação de plano de contas
+security.role.member.coa_create.description=Permissão para criação de um novo plano de contas do member
+security.role.member.coa_update.name=Edição de plano de contas
+security.role.member.coa_update.description=Permissão para edição dos dados de um plano de contas do member
+security.role.member.coa_delete.name=Exclusão de plano de contas
+security.role.member.coa_delete.description=Permissão para exclusão de uma plano de contas do member
