--- a/core/src/main/resources/strings/core-roles.properties
+++ b/core/src/main/resources/strings/core-roles.properties
@@ -1,5 +1,5 @@
-security.role.organization.master.name=Master
-security.role.organization.master.description=Permissão master do sistema, com acesso a todas as funcionalidades
+security.role.organization.organization_all.name=Master
+security.role.organization.organization_all.description=Permissão master do sistema, com acesso a todas as funcionalidades
 security.role.organization.user_read.name=Leitura de usuário
 security.role.organization.user_read.description=Permissão para leitura dos dados de usuário da organização
 security.role.organization.user_create.name=Criação de usuário
@@ -14,19 +14,19 @@ security.role.organization.group_update.name=Edição de grupo
 security.role.organization.group_update.description=Permissão para edição dos dados e permissões de um grupo da organização
 security.role.organization.group_delete.name=Exclusão de grupo
 security.role.organization.group_delete.description=Permissão para exclusão de um grupo da organização
-security.role.organization.member_read.name=Leitura de member
-security.role.organization.member_read.description=Permissão para leitura dos dados de member da organização
-security.role.organization.member_create.name=Criação de member
-security.role.organization.member_create.description=Permissão para criação de um novo member da organização
-security.role.organization.member_update.name=Edição de member
-security.role.organization.member_update.description=Permissão para edição dos dados de um member da organização
-security.role.organization.member_delete.name=Exclusão de member
-security.role.organization.member_delete.description=Permissão para exclusão de um member da organização
-security.role.member.coa_read.name=Leitura de plano de contas
-security.role.member.coa_read.description=Permissão para leitura dos dados de plano de contas do member
-security.role.member.coa_create.name=Criação de plano de contas
-security.role.member.coa_create.description=Permissão para criação de um novo plano de contas do member
-security.role.member.coa_update.name=Edição de plano de contas
-security.role.member.coa_update.description=Permissão para edição dos dados de um plano de contas do member
-security.role.member.coa_delete.name=Exclusão de plano de contas
-security.role.member.coa_delete.description=Permissão para exclusão de uma plano de contas do member
+security.role.organization.unit_read.name=Leitura de unit
+security.role.organization.unit_read.description=Permissão para leitura dos dados de unit da organização
+security.role.organization.unit_create.name=Criação de unit
+security.role.organization.unit_create.description=Permissão para criação de um novo unit da organização
+security.role.organization.unit_update.name=Edição de unit
+security.role.organization.unit_update.description=Permissão para edição dos dados de um unit da organização
+security.role.organization.unit_delete.name=Exclusão de unit
+security.role.organization.unit_delete.description=Permissão para exclusão de um unit da organização
+security.role.unit.coa_read.name=Leitura de plano de contas
+security.role.unit.coa_read.description=Permissão para leitura dos dados de plano de contas do unit
+security.role.unit.coa_create.name=Criação de plano de contas
+security.role.unit.coa_create.description=Permissão para criação de um novo plano de contas do unit
+security.role.unit.coa_update.name=Edição de plano de contas
+security.role.unit.coa_update.description=Permissão para edição dos dados de um plano de contas do unit
+security.role.unit.coa_delete.name=Exclusão de plano de contas
+security.role.unit.coa_delete.description=Permissão para exclusão de uma plano de contas do unit
