--- a/module/management/management-data/src/main/resources/strings/management-data.properties
+++ b/module/management/management-data/src/main/resources/strings/management-data.properties
@@ -32,14 +32,13 @@ management.user-validation.first-name.invalid-length=O nome deve conter entre {0
 management.user-validation.first-name.invalid-value=O nome não pode conter caracteres especiais
 management.user-validation.last-name.invalid-length=O sobrenome deve conter entre {0} e {1} caracteres
 management.user-validation.last-name.invalid-value=O sobrenome não pode conter caracteres especiais
-management.user-validation.main-email.invalid-value=O e-mail é inválido
 management.user-validation.document-number.invalid-value=O número do documento é inválido
-management.user-validation.phone-number.invalid-character=O telefone deve conter apenas numeros
-management.user-validation.main-email.duplicated-value=O e-mail já está sendo utilizado
 
 management.group-validation.invalid-entity.error-message=Os dados do grupo são inválidos
 management.group-validation.group-name.invalid-length=O nome do grupo deve conter entre {0} e {1} caracteres
 management.group-validation.group-name.invalid-value=O nome do grupo não pode conter caracteres especiais
+management.group-validation.group-description.invalid-length=A descrição do grupo deve conter entre {0} e {1} caracteres
+management.group-validation.group-description.invalid-value=A descrição do grupo não pode conter caracteres especiais
 
 management.model.address-state.ac.label=Acre
 management.model.address-state.al.label=Alagoas
